# tinygwas_multithread

./: .README.md.swp  CMakeLists.txt  README.md
